k8s/21-inventory-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-db
  namespace: orderflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-db
  template:
    metadata:
      labels:
        app: inventory-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres", "-d", "inventory"]
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres", "-d", "inventory"]
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "500m", memory: "512Mi" }
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: inventory-db-data
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-db
  namespace: orderflow
spec:
  selector:
    app: inventory-db
  ports:
    - port: 5432
      targetPort: 5432
