k8s/40-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: orderflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: orderflow-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          # nginx hace de reverse-proxy de /orders y /hubs hacia el Service "orders-api".
          readinessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests: { cpu: "50m", memory: "64Mi" }
            limits: { cpu: "200m", memory: "128Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: orderflow
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
